styles/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --primary-color: darkblue;
    --secondary-color: white;
    --border-color: black;
    --box-shadow-color: gray;
    --light-bg: #eee;

    --standard-padding: 10px;
    --image-width: 150px;
    --aside-image-width: 200px;
    --max-content-width: 800px;
}

nav {
    background-color: var(--primary-color);
    padding: var(--standard-padding);
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap;
}

nav a {
    color: var(--secondary-color);
    display: block;
    padding: 0.5rem 1rem;
    text-decoration: none;
    font-weight: 700;
    font-size: 1.2rem;
    border-radius: 4px;
    transition: background-color 0.3s;
}

nav a:hover {
    background-color: #4682b4;
}

header,
.grid,
footer {
    max-width: 840px;
    margin: 0 auto;
}

h1 {
    color: var(--primary-color);
    border-bottom: 2px solid var(--border-color);
    padding-bottom: 0.5rem;
    margin-bottom: 1rem;
}

.grid {
    display: grid;
    grid-template-columns: 20rem 1fr;
    gap: 1rem;
    align-items: start;
    margin-top: 1rem;
}

main {
    grid-column: 2 / 3;
    margin: 0 0 1rem 0;
    max-width: var(--max-content-width);
}

aside {
    width: 20rem;
    grid-column: 1 / 2;
    grid-row: 1 / 2;
    position: relative;
}

main img {
    float: right;
    margin-left: 1rem;
    width: var(--image-width);
    height: auto;
    border: 1px solid var(--border-color);
    padding: 2px;
    box-shadow: 0 0 30px var(--box-shadow-color);
}

aside img {
    width: var(--aside-image-width);
    height: auto;
}

img {
    width: var(--image-width);
    height: auto;
    border: 1px solid var(--border-color);
    padding: 2px;
    box-shadow: 0 0 30px var(--box-shadow-color);
}

aside h2 {
    position: absolute;
    top: 10px;
    left: 10px;
    background-color: rgba(255, 255, 255, 0.8);
    padding: 5px;
}

p {
    padding: 0;
}

.box {
    margin: 1rem;
    border: 1px solid var(--border-color);
    padding: 1rem;
    background-color: var(--light-bg);
    color: var(--border-color);
}

footer {
    margin-top: 20px;
    border-top: 2px solid var(--border-color);
    text-align: center;
    padding: 1rem;
    background-color: #eee;
}

main::after {
    content: "";
    display: table;
    clear: both;
}

